# carter

./: .dockerignore  .gitignore  Dockerfile.beat  Dockerfile.worker  alembic.ini  carter_flask.py  celery_carter.py  db.py  docker-compose.yml  heroku.yml  pyproject.toml  timegan_playground.ipynb
alembic/: env.py
alembic/versions/: 5e45fc341fd0_added_pagesnapshot_model.py
config/: base.py
migrations/versions/: 9daefde63ab9_initial_migration_added_pagesnapshot_.py
models/: page_snapshot.py
parsers/core/: parser.py
tests/parsers/: test_parser.py
