[tool.poetry]
name = "carter"
version = "0.1.0"
description = ""
authors = ["Aidar Mamytov"]

[tool.poetry.dependencies]
python = "3.8.12"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
pytest = "^6.2.5"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
celery = "^5.2.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
